# Rebot

./: .gitignore  README.md  docker-compose.yml  print_lines.py  pyproject.toml  tmp.py  tmp_fix_api.py  tmp_replace.py  tmp_test.py
.github/workflows/: backend-ci.yml  flutter-ci.yml
app/orchestration/: metagpt_helpers.py
backend/: .env.example  .gitignore  Dockerfile  README.md  game.js  grid.js  index.html  input.js  requirements.txt  score.js  style.css  tile.js
backend/2045/: README.md  game.js  grid.js  index.html  input.js  style.css  tile.js
backend/2048 Game/: README.md  game-state.js  (+7 more)
docs/: ARCHITECTURE.md  CURRENT_TECH_ASSESSMENT.md  DEPLOYMENT.md  EVALUATION_AND_UPGRADE_PLAN.md  FRAMEWORK_ANALYSIS.md  INNOVATION_SUMMARY.md  METAGPT_AUTOGPT_FUSION_PLAN.md  PAPERS_POTENTIAL.md  PRODUCT_PRD_BASELINE.md  RUNNING.md  TECHNOLOGY_INNOVATION_REPORT.md  meta_integration.md  observability_stack.md  plugin_platform_p0.md
rebot/: __init__.py  cli.py  config.py  context.py  logging.py  package-lock.json  schema.py  team.py  team_dag.py  team_scheduler.py
scripts/: check_repo_hygiene.py  init_all.sql  init_db.sql  init_pgvector.sql  install_rebot_stack.sh  prd_benchmark_cases.json  prd_benchmark_manifest.sample.json  run_local.ps1  run_local.sh  score_prd_benchmark.py
tests/: conftest.py  test_agent.py  test_backend_auth.py  test_cli.py  test_coevolution.py  test_config.py  test_core_concepts.py  test_embeddings.py  test_generate.py  test_logging.py  test_messages.py  test_roles.py  test_tools.py  test_universal.py  test_vector_store.py  test_workflows.py
(+341 files in other folders)
