[project]
name = "rebot"
version = "0.1.0"
description = "Rebot - Multi-Agent Code Generation Framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [ { name = "Rebot Team" } ]
keywords = ["agent", "code-generation", "multi-agent", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0",
    "typing-extensions>=4.0",
    "httpx>=0.25",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
rebot = "rebot.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["rebot"]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"